<resources>
    <string name="app_name">Majang</string>
    <string name="wan">萬牌</string>
    <string name="wan_1">一萬</string>
    <string name="wan_2">二萬</string>
    <string name="wan_3">三萬</string>
    <string name="wan_4">四萬</string>
    <string name="wan_5">五萬</string>
    <string name="wan_6">六萬</string>
    <string name="wan_7">七萬</string>
    <string name="wan_8">八萬</string>
    <string name="wan_9">九萬</string>
    <string name="tiao">條牌</string>
    <string name="tiao_1">一條</string>
    <string name="tiao_2">二條</string>
    <string name="tiao_3">三條</string>
    <string name="tiao_4">四條</string>
    <string name="tiao_5">五條</string>
    <string name="tiao_6">六條</string>
    <string name="tiao_7">七條</string>
    <string name="tiao_8">八條</string>
    <string name="tiao_9">九條</string>
    <string name="tong">筒牌</string>
    <string name="tong_1">一筒</string>
    <string name="tong_2">二筒</string>
    <string name="tong_3">三筒</string>
    <string name="tong_4">四筒</string>
    <string name="tong_5">五筒</string>
    <string name="tong_6">六筒</string>
    <string name="tong_7">七筒</string>
    <string name="tong_8">八筒</string>
    <string name="tong_9">九筒</string>
    <string name="zi">字牌</string>
    <string name="zi_1">東</string>
    <string name="zi_2">南</string>
    <string name="zi_3">西</string>
    <string name="zi_4">北</string>
    <string name="zi_5">中</string>
    <string name="zi_6">發</string>
    <string name="zi_7">白</string>
    <string name="toolbar_title">輸入牌型</string>
    <string name="menu_home">輸入牌型</string>
    <string name="menu_gallery">役種一覽</string>
    <string name="menu_calculate">符數計算機</string>
    <string name="pai_option">牌型選項</string>
    <string name="next">下一步</string>
    <string name="deleteAll">移除全部</string>
    <string name="choose_fu">選擇符數</string>
    <string name="input_fan">輸入番數</string>
    <string name="select_fan">牌型種類</string>
</resources>