<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="34dp"
        android:layout_height="21dp"
        android:text="@string/tiao"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="@color/main"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tiao_card"
        app:layout_constraintStart_toStartOf="@+id/tiao_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tiao_card"
        android:layout_width="345dp"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@color/thr"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027">
        <!-- Title, secondary and supporting text -->

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            tools:ignore="SpeakableTextPresentCheck">

            <!-- Buttons -->
            <LinearLayout
                android:id="@+id/tiao_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" />
        </HorizontalScrollView>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="34dp"
        android:layout_height="21dp"
        android:text="@string/wan"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="@color/main"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/wan_card"
        app:layout_constraintStart_toStartOf="@+id/wan_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/wan_card"
        android:layout_width="345dp"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@color/thr"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239">
        <!-- Title, secondary and supporting text -->

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            tools:ignore="SpeakableTextPresentCheck">

            <!-- Buttons -->
            <LinearLayout
                android:id="@+id/wan_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" />
        </HorizontalScrollView>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="34dp"
        android:layout_height="21dp"
        android:text="@string/tong"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="@color/main"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tong_card"
        app:layout_constraintStart_toStartOf="@+id/tong_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tong_card"
        android:layout_width="345dp"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@color/thr"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46">
        <!-- Title, secondary and supporting text -->

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            tools:ignore="SpeakableTextPresentCheck">

            <!-- Buttons -->
            <LinearLayout
                android:id="@+id/tong_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" />
        </HorizontalScrollView>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="34dp"
        android:layout_height="21dp"
        android:text="@string/zi"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="@color/main"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/zi_card"
        app:layout_constraintStart_toStartOf="@+id/zi_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/zi_card"
        android:layout_width="345dp"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@color/thr"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675">
        <!-- Title, secondary and supporting text -->

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            tools:ignore="SpeakableTextPresentCheck">

            <!-- Buttons -->
            <LinearLayout
                android:id="@+id/zi_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" />
        </HorizontalScrollView>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>

