<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:text="@string/pai_option"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="@color/main"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/option_spinner"
                    app:layout_constraintStart_toStartOf="@+id/option_spinner" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/option_spinner"
                    android:layout_width="346dp"
                    android:layout_height="58dp"
                    android:layout_marginTop="52dp"
                    app:cardCornerRadius="8dp"

                    app:cardElevation="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/thr"
                    app:strokeWidth="2dp">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="@+id/zi_card"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/zi_card"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/zi_card"
                        app:layout_constraintTop_toBottomOf="@+id/zi_card"
                        app:layout_constraintVertical_bias="1.0" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiao"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="@color/main"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/tiao_card"
                    app:layout_constraintStart_toStartOf="@+id/tiao_card" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/tiao_card"
                    android:layout_width="345dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="56dp"
                    app:cardBackgroundColor="@color/thr"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/option_spinner"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/option_spinner"
                    app:layout_constraintTop_toBottomOf="@+id/option_spinner">
                    <!-- Title, secondary and supporting text -->


                    <HorizontalScrollView
                        android:layout_width="292dp"
                        android:layout_height="62dp"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginVertical="10dp"
                        tools:ignore="SpeakableTextPresentCheck">

                        <!-- Buttons -->
                        <LinearLayout
                            android:id="@+id/tiao_linear_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" />
                    </HorizontalScrollView>


                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wan"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="@color/main"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/wan_card"
                    app:layout_constraintStart_toStartOf="@+id/wan_card" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/wan_card"
                    android:layout_width="345dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="64dp"
                    app:cardBackgroundColor="@color/thr"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/tiao_card"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tiao_card"
                    app:layout_constraintTop_toBottomOf="@+id/tiao_card">
                    <!-- Title, secondary and supporting text -->

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginVertical="10dp"
                        tools:ignore="SpeakableTextPresentCheck">

                        <!-- Buttons -->
                        <LinearLayout
                            android:id="@+id/wan_linear_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" />
                    </HorizontalScrollView>


                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tong"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="@color/main"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/tong_card"
                    app:layout_constraintStart_toStartOf="@+id/tong_card" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/tong_card"
                    android:layout_width="345dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="72dp"
                    app:cardBackgroundColor="@color/thr"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/wan_card"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/wan_card"
                    app:layout_constraintTop_toBottomOf="@+id/wan_card">
                    <!-- Title, secondary and supporting text -->

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginVertical="10dp"
                        tools:ignore="SpeakableTextPresentCheck">

                        <!-- Buttons -->
                        <LinearLayout
                            android:id="@+id/tong_linear_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" />
                    </HorizontalScrollView>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zi"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="@color/main"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/zi_card"
                    app:layout_constraintStart_toStartOf="@+id/zi_card" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/zi_card"
                    android:layout_width="345dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="68dp"
                    app:cardBackgroundColor="@color/thr"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/tong_card"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tong_card"
                    app:layout_constraintTop_toBottomOf="@+id/tong_card">
                    <!-- Title, secondary and supporting text -->

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginVertical="10dp"
                        tools:ignore="SpeakableTextPresentCheck">

                        <!-- Buttons -->
                        <LinearLayout
                            android:id="@+id/zi_linear_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" />
                    </HorizontalScrollView>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/bottom_bar"
        layout="@layout/main_buttom_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>
